# strumok-crypto-task2

./: .gitignore  README.md
implementation/: CMakeLists.txt  generate_relations.py  main.cpp  strumok_funcs.cpp  strumok_funcs.h  strumok_tables.c  strumok_tables.h
implementation/tests/: strumok_tests.cpp
